--- a/Plugins/GraphDS/IO/Implementations/JSON_IO/JSON_IO.csproj
+++ b/Plugins/GraphDS/IO/Implementations/JSON_IO/JSON_IO.csproj
@@ -72,6 +72,10 @@
       <Project>{A233FDB4-70A9-4284-827A-1704950E0EF3}</Project>
       <Name>Settings</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Library\Internal\UserdefinedDataType\UserdefinedDataType.csproj">
+      <Project>{1A2B672E-DD8C-4948-8370-1483408E3B50}</Project>
+      <Name>UserdefinedDataType</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\IOInterface\IOInterface.csproj">
       <Project>{991132D2-15E0-4BB7-8328-3A51646D4F01}</Project>
       <Name>IOInterface</Name>
