--- a/Plugins/GraphDS/IO/Implementations/GRAPHVIS_IO/GRAPHVIS_IO.csproj
+++ b/Plugins/GraphDS/IO/Implementations/GRAPHVIS_IO/GRAPHVIS_IO.csproj
@@ -56,6 +56,10 @@
       <Project>{BE2A2669-CCDE-40A8-AEAB-673260D7260A}</Project>
       <Name>QueryResult</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Library\External\NewFastSerializer\NewFastSerializer.csproj">
+      <Project>{942F25CF-46A7-4413-B062-E3395C8D1C9A}</Project>
+      <Name>NewFastSerializer</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\..\..\..\Library\Internal\CollectionWrapper\CollectionWrapper.csproj">
       <Project>{7748D9BA-FB40-42F9-9F51-F636F9F1DA8E}</Project>
       <Name>CollectionWrapper</Name>
@@ -75,6 +79,10 @@
     <ProjectReference Include="..\..\..\..\..\Library\Internal\Settings\Settings.csproj">
       <Project>{A233FDB4-70A9-4284-827A-1704950E0EF3}</Project>
       <Name>Settings</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\..\..\Library\Internal\UserdefinedDataType\UserdefinedDataType.csproj">
+      <Project>{1A2B672E-DD8C-4948-8370-1483408E3B50}</Project>
+      <Name>UserdefinedDataType</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\IOInterface\IOInterface.csproj">
       <Project>{991132D2-15E0-4BB7-8328-3A51646D4F01}</Project>
